--- a/app/index.html
+++ b/app/index.html
@@ -7,16 +7,58 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus necessitatibus ducimus dolorum quo maiores nobis minima tenetur amet commodi rerum deleniti ullam animi consequatur odio eligendi, officia voluptatibus quasi consequuntur!
-  Sed magni error suscipit neque doloribus maiores debitis voluptatibus minus blanditiis vitae animi expedita doloremque rerum delectus, dignissimos ullam distinctio, perspiciatis eligendi repellat unde repellendus fugit, vel tempora. Optio, dolorem?
-  In, eius! In ratione officiis, aperiam quis ex voluptatem ut repellendus sit minus sed pariatur omnis mollitia asperiores debitis vel culpa aliquam optio nihil fuga! Ipsum voluptates tempora veritatis. Assumenda?
-  Corrupti placeat excepturi deleniti quaerat nostrum ea, illo reiciendis magni commodi officia officiis libero, aliquid vel unde dolorum cumque, velit maxime minima maiores. Eius corrupti, perferendis laboriosam quo dignissimos officiis!
-  Assumenda iste recusandae commodi tempora. Vero perspiciatis vitae odio voluptate quod rerum, laudantium quae itaque, fugiat molestiae error cum modi doloremque mollitia eum et natus. Adipisci natus quidem officiis autem?
-  Itaque inventore fugiat enim voluptatem cupiditate? Eveniet, officiis, beatae voluptas similique nulla perspiciatis incidunt iusto earum culpa laboriosam nam pariatur repellendus. Sit et qui animi provident mollitia perspiciatis recusandae incidunt.
-  Placeat ipsum sint perspiciatis esse atque fugiat ut, dolorum minus numquam accusantium, hic deleniti aspernatur voluptatum tenetur repellat beatae libero sunt at nulla. Officiis saepe nesciunt cupiditate culpa sint? In.
-  Qui ipsam blanditiis expedita molestiae soluta vitae ab quia accusamus assumenda modi eius ducimus tempora esse culpa aperiam, labore illum, earum aliquam consequuntur rerum neque provident ex totam vel. Ullam.
-  Recusandae earum provident maxime accusantium. Error perferendis quas fugit aut? Non itaque aspernatur facere id repellendus ipsa maiores, odio eum voluptate deserunt autem amet quibusdam, illo neque ea exercitationem tempora?
-  Eveniet, nemo similique? Mollitia unde amet, voluptatem modi nemo rem, omnis accusamus facere, inventore possimus necessitatibus ad dignissimos soluta debitis ratione architecto aspernatur velit porro non animi? Officia, cum corrupti.
+
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="logo" href="">
+          <img class="logo__img" src="images/logo.png" alt="">
+        </a>
+
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">SHOP</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">PAGE</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">BLOG</a>
+            </li>
+            <li class="menu__list-item">
+              <a class="menu__list-link" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="user-nav">
+          <a class="user-nav__link" href="#">
+            <img  class="user-nav__link-img" src="images/icons/user.svg" alt="user icon">
+          </a>
+          <a class="user-nav__link" href="#">
+            <img  class="user-nav__link-img" src="images/icons/search.svg" alt="user icon">
+          </a>
+          <a class="user-nav__link" href="#">
+            <img  class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
+            <span class="user-nav__num">3</span>
+          </a>
+          <a class="user-nav__link" href="#">
+            <img  class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
+            <span class="user-nav__num">7</span>
+          </a>
+          
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+  
+
 
     <script src="js/main.min.js"></script>
 </body>
