added popup section

--- a/app/index.html
+++ b/app/index.html
@@ -295,7 +295,7 @@
       <div class="container">
         <div class="video-fashion__inner">
           <div class="video-fashion__popup" style="background-image:url('images/fashion.jpg')">
-            <a class="video-fashion__play" data-fancybox href="https://www.youtube.com/watch?v=jiv2an8F3Os">
+            <a class="fancybox" data-fancybox href="https://www.youtube.com/watch?v=zSPpBK3RN4w&t=1s">
               <img class="video-fashion__img" src="images/icons/play btn.svg" alt="button video play">
             </a>
             
@@ -497,9 +497,6 @@
       </div>
     </div>
   </footer>
-
-  
-
 
     <script src="js/main.min.js"></script>
 </body>
