--- a/app/product.html
+++ b/app/product.html
@@ -285,12 +285,191 @@
         </div>
 
         <div class="product-tabs">
+          <div class="product-tabs__top">
+            <a class="product-tabs__top-item" href="#tab-1">
+              Description
+            </a>
+            <a class="product-tabs__top-item" href="#tab-2">
+              Additional information
+            </a>
+            <a class="product-tabs__top-item product-tabs__top-item--active" href="#tab-3">
+              Reviews
+            </a>
+          </div>
+          <div class="product-tabs__content">
+            <div class="product-tabs__content-item" id="tab-1">content1</div>
+            <div class="product-tabs__content-item" id="tab-2">content2</div>
+            <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
+              <div class="comments">
+
+                <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+                <div class="comments__content">
+                  <div class="comments__content-top">
+                    <p class="comments__content-name">
+                      Michle Jhon
+
+                    </p>
+
+                    <div class="comments__content-date">
+                      2 days ago
+                    </div>
+
+                    <div class="star comments__content-star">
+
+                    </div>
+
+                  </div>
+
+                  <p class="comments__content-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel facilisis. 
+                  </p>
+
+                  <a class="comments__content-reply" href="#">
+                    Reply
+                  </a>
+
+
+                </div>
+              </div>
+
+
+              <div class="comments">
+
+                <img class="comments__img" src="images/avatar/2.jpg" alt="avatar">
+                <div class="comments__content">
+                  <div class="comments__content-top">
+                    <p class="comments__content-name">
+                      Michle Jhon
+
+                    </p>
+
+                    <div class="comments__content-date">
+                      2 days ago
+                    </div>
+
+                    <div class="star comments__content-star">
+
+                    </div>
+
+                  </div>
+
+                  <p class="comments__content-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel facilisis. 
+                  </p>
+
+                  <a class="comments__content-reply" href="#">
+                    Reply
+                  </a>
+
+
+                </div>
+              </div>
+
+
+
+              <div class="comments">
+
+                <img class="comments__img" src="images/avatar/3.jpg" alt="avatar">
+                <div class="comments__content">
+                  <div class="comments__content-top">
+                    <p class="comments__content-name">
+                      Michle Jhon
+
+                    </p>
+
+                    <div class="comments__content-date">
+                      2 days ago
+                    </div>
+
+                    <div class="star comments__content-star">
+
+                    </div>
+
+                  </div>
+
+                  <p class="comments__content-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Qus ipsum speissei ultrices gravida. Risus commodo viverra maeenas accumsan lacus vel facilisis. 
+                  </p>
+
+                  <a class="comments__content-reply" href="#">
+                    Reply
+                  </a>
+
+
+                </div>
+              </div>
+
+              <form class="comments__form" action="#">
+                <p class="comments__form-title">
+                  Add your review 
+                </p>
+
+                <div class="comments__form-rating">
+                  <span>Your rating</span>
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+
+                  <label class="comments__form-label">
+                    <input class="comments__form-input" type="radio" name="star">
+                    <span class="comments__form-radio"></span>
+
+                  </label>
+
+
+                </div>
+
+                <div class="comments__form-inputs">
+                  <input class="comments__form-inputes comments__form-inputes--1" type="text" placeholder="Your name">
+                  <input class="comments__form-inputes" type="email" placeholder="E-mail adress">
+
+                </div>
+                
+                <textarea class="comments__form-textarea" placeholder="Your text here">
+
+                </textarea>
+
+                <button class="comments__form-btn" type="submit">
+                  LEAVE REVIEW
+                </button>
+
+              </form>
+
+            </div>
+          </div>
 
         </div>
 
-        <div class="product-reviews">
-
-        </div>
       </div>
     </section>
     
