added modules and fixed top-slider

--- a/app/404-page.html
+++ b/app/404-page.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/404-page.min.css">
 </head>
 <body>
 
-  <header class="header header--404-page">
+  <header class="header">
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="">
@@ -241,6 +241,9 @@
           <img class="footer-bot__accept-img" src="images/icons/visa.png" alt="visa">
           <img class="footer-bot__accept-img" src="images/icons/paypal.png" alt="paypal">
         </div>
+
+
+
 
 
       </div>
