--- a/app/contacts.html
+++ b/app/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/contacts.min.css">
 </head>
 <body>
 
@@ -59,28 +59,29 @@
   <main class="main">
 
     <section class="top">
-      <div class="top__container" style="background-image: url('images/top-bg.jpg')">
-        <div class="container">
-          <h2 class="top__title title">CONTACT US</h2>
+    <div class="top__container" style="background-image: url('images/top-bg.jpg')">
+      <div class="container">
+        <h2 class="top__title title">LOG IN</h2>
 
-          <div class="breadcrumbs">
-            <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="">
-                  Contact
-                </a>
-              </li>
+        <div class="breadcrumbs">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="">
+                Home
+              </a>
+            </li>
 
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="">
-                  Log in
-                </a>
-              </li>
-            </ul>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="">
+                Log in
+              </a>
+            </li>
+          </ul>
 
-          </div>
         </div>
       </div>
+    </div>
+  </section>
     </section>
 
     <section class="map">
@@ -297,6 +298,9 @@
           <img class="footer-bot__accept-img" src="images/icons/visa.png" alt="visa">
           <img class="footer-bot__accept-img" src="images/icons/paypal.png" alt="paypal">
         </div>
+
+
+
 
 
       </div>
