--- a/app/module/_header/_header.html
+++ b/app/module/_header/_header.html
@@ -1,3 +1,4 @@
+
 <header class="header">
     <div class="container">
       <div class="header__inner">
@@ -6,6 +7,9 @@
         </a>
 
         <nav class="menu">
+          <button class="menu__btn">
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
