--- a/app/register.html
+++ b/app/register.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-  <header class="header">
+  
+<header class="header">
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="">
@@ -16,6 +17,9 @@
         </a>
 
         <nav class="menu">
+          <button class="menu__btn">
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
