added full adaptive

--- a/app/module/_top-slider/_top-slider.html
+++ b/app/module/_top-slider/_top-slider.html
@@ -72,7 +72,7 @@
         <div class="top-slider__item">
           <div class="top-slider__content">
             <h3 class="top-slider__title">
-              New Season
+              New Season <br>
               New Brand Collection
             </h3>
 
