--- a/app/shop.html
+++ b/app/shop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/shop.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 
@@ -90,6 +91,10 @@
     <div class="shop">
       <div class="container">
         <div class="shop__inner">
+           <button class="shop-filter__btn">
+              <img src="images/filter-solid (1).svg" alt="filter">
+                    
+            </button>
           <div class="shop__filters filter">
 
             <div class="filter__item filter-search">
